apps/dssp-targetp-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-1
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-1
  template:
    metadata:
      labels:
        app: dssp-targetp-1
        backstage.io/kubernetes-id: dssp-targetp-1
        environment: dev
    spec:
      containers:
        - name: dssp-targetp-1
          image: chaitanyapandeygspann/dssp-targetp-1:1.0.2
          ports:
            - containerPort: 5000
