apps/dssp-targetp-1/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-targetp-1
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /dssp-targetp-1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-targetp-1
                port:
                  number: 80
